--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="A deep dive into emotional and business dynamics of music using acoustic spectral analysis">
-  <title>Music Spectral Analysis for Emotion & Business</title>
+  <title>Decoded by Decibels</title>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&display=swap" rel="stylesheet">
   <style>
     * {
@@ -75,7 +75,7 @@
   <div class="container">
     <header>
       <h1>Acoustic Spectral Analysis for Emotion and Business in Music</h1>
-      <p>By Chidhananda R.S. and Dr. Apurva Kulkarni</p>
+      <p>By Prof. Chidhananda R.S. and Dr. Apurva Kulkarni</p>
     </header>
 
     <section>
