--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="A deep dive into emotional and business dynamics of music using acoustic spectral analysis">
-  <title>Decoded by Decibels</title>
+  <title>Decoded by Decibels – Uncovering the Emotional Blueprint of Music</title>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&display=swap" rel="stylesheet">
   <style>
     * {
@@ -23,9 +23,12 @@
     }
 
     header {
-      text-align: center;
-      margin-bottom: 3rem;
-    }
+  text-align: center;
+  margin-bottom: 3rem;
+  padding: 2rem;
+  background: linear-gradient(90deg, #fef3c7, #e0f2fe);
+  border-radius: 1rem;
+}
 
     h1 {
       font-size: 2.5rem;
@@ -68,15 +71,40 @@
       font-size: 0.875rem;
       color: #6b7280;
     }
-  </style>
+  @keyframes fadeIn {
+  from { opacity: 0; transform: translateY(10px); }
+  to { opacity: 1; transform: translateY(0); }
+}
+
+header h2 {
+  animation: fadeIn 1.5s ease-out;
+}
+
+.subtitle {
+  font-weight: 400;
+  font-size: 1.25rem;
+  color: #6b7280;
+  margin-top: 0.5rem;
+  animation: fadeIn 1.5s ease-out;
+}
+
+@keyframes fadeIn {
+  from { opacity: 0; transform: translateY(10px); }
+  to { opacity: 1; transform: translateY(0); }
+}
+
+</style>
 </head>
 
 <body>
   <div class="container">
     <header>
-      <h1>Acoustic Spectral Analysis for Emotion and Business in Music</h1>
-      <p>By Prof. Chidhananda R.S. and Dr. Apurva Kulkarni</p>
-    </header>
+  <h1>Decoded by Decibels</h1>
+  <h2 class="subtitle">
+    Uncovering Emotion and Business Intelligence in Music through Spectral Audio Analysis
+  </h2>
+  <p>By Chidhananda R.S. and Dr. Apurva Kulkarni</p>
+</header>
 
     <section>
       <h2>Executive Summary</h2>
