--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="A deep dive into emotional and business dynamics of music using acoustic spectral analysis">
-  <title>Decoded by Decibels – Uncovering the Emotional Blueprint of Music</title>
+  <title>Decoded by Decibels </title>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&display=swap" rel="stylesheet">
   <style>
     * {
@@ -103,7 +103,7 @@ header h2 {
   <h2 class="subtitle">
     Uncovering Emotion and Business Intelligence in Music through Spectral Audio Analysis
   </h2>
-  <p>By Chidhananda R.S. and Dr. Apurva Kulkarni</p>
+  <p>By Prof. Chidhananda R.S. and Dr. Apurva Kulkarni</p>
 </header>
 
     <section>
